# sinabs

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ChangeLog  Pipfile  README.md  codecov.yml  jupyterlab-requirements.txt  pull_request_template.md  requirements.txt  setup.cfg  setup.py  sphinx-requirements.txt  test-requirements.txt
.github/workflows/: ci-pipeline.yml
doc/source/: api.rst  conf.py  index.rst  tutorials.rst
docs/: README.md  conf.py  contact.md  development.md  index.md  index.rst  requirements.txt
docs/_templates/: class_layer.rst
docs/about/: about.md  about.rst  contributing.md  differences.md  info.md  release_notes.md
docs/api/: activation.rst  api.rst  from_torch.rst  hooks.rst  layers.rst  network.rst  nir.rst  synopcounter.rst  utils.rst
docs/getting_started/: fundamentals.rst  getting_started.rst  iaf_neuron_model.ipynb  install.rst  python_pyenv_pipenv.rst  quickstart.ipynb
docs/how_tos/: activations.ipynb  custom_hooks.ipynb  how_tos.rst  synops_loss.ipynb  synops_loss_ann.ipynb  synops_loss_snn.ipynb
docs/notebooks/: LeNet_5_EngChinese.ipynb  bptt.ipynb  mnist.ipynb
docs/plugins/: plugins.rst
docs/source/: FAQs.md  advanced_concepts.rst  api.rst  change_log.rst  conf.py  contact_us.md  dangers.md  development.md  dynapcnn_compatible_model.md  dynapcnn_model.md  examples.rst  from_keras.rst  from_torch.rst  getting_started_with_devkit.rst  gettingstarted.rst  index.rst  installation.md  introduction.rst  layers.rst  specksim.md  the_basics.md  tutorials.rst  visualizer.md
examples/: gesture_model.pth  gesture_viz.py  mnist_dynapcnn.py  mnist_dynapcnn_devkit_2.py  mnist_speck2b.py
experiments/: SequentialMnist.ipynb  SpikingLayer.ipynb
scratch/: dev_desired_api.py  user_desired_usage.py
sinabs/: __init__.py  cnnutils.py  conversion.py  from_keras.py  from_torch.py  graph.py  hooks.py  network.py  nir.py  savemodel.py  synopcounter.py  test_discretized.py  test_doorbell.py  test_dvs.py  test_individual_cases.py  test_sequential_to_speck.py  test_smartdoor_net.py  utils.py  validate_memory_speck.py
tests/: hw_utils.py  mnist_params.pt  obsolete_test_sequential_to_speck.py  requirements.txt  test_activations.py  test_alif.py  test_auto_mapping.py  test_backend.py  test_batch_mismatch.py  test_batch_size_update.py  test_bptt.py  test_compare_act.py  test_compatible_layer_build.py  test_config_making.py  test_conv1d.py  test_conv2d.py  test_conv3d.py  test_conversion.py  test_convtranspose2d.py  test_copy.py  test_crop2d.py  test_deep_copy.py  test_device_movement.py  test_discover_device.py  test_discretized.py  test_doorbell.py  test_dropout.py  test_dvs.py  test_dvs_input.py  test_dvs_layer.py  test_event_conversion.py  test_exp_leak.py  test_flatten.py  test_from_model.py  test_graph.py  test_hooks.py  test_iaf.py  test_iaf_initialization.py  test_img2spk.py  test_individual_cases.py  (+45 more)
(+456 files in other folders)
