[metadata]
name = sinabs-dynapcnn
author = SynSense
author_email = sinabs@synsense.ai
description_file = README.md
description_content_type = text/markdown
long_description_content_type = text/markdown
summary = sinabs plugin for porting models to chips with DYNAP-CNN technology
homepage = sinabs.ai
project_urls =
    Source Code = https://gitlab.com/synsense/sinabs-dynapcnn
    Documentation = https://synsense.gitlab.io/sinabs-dynapcnn
license = GNU AGPLv3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3
keywords =
    spiking
    SNN
    DYNAPCNN
    Speck

[files]
packages =
    sinabs

[build_sphinx]
project = sinabs-dynapcnn
source_dir = docs/source
build_dir = docs/build

[easy_install]
extra_index_url=https://gitlab.com/api/v4/projects/27423070/packages/pypi/simple
