[metadata]
name = sinabs
author = SynSense (formerly AiCTX)
author_email = sinabs@synsense.ai
description_file = README.md
description_content_type = text/markdown
long_description_content_type = text/markdown
summary = SynSense Spiking Neural Network simulator for deep neural networks (DNNs).
homepage = sinabs.ai
project_urls =
    Source code = https://github.com/synsense/sinabs
    Documentation = https://readthedocs.org/projects/sinabs/
license = GNU AGPLv3
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3
keywords =
    spiking neural networks
    machine learning
    SNN
    DYNAPCNN
    Speck

[files]
packages = sinabs

[build_sphinx]
project = sinabs-dynapcnn
source_dir = docs/source
build_dir = docs/build

