[metadata]
name = sinabs
author = SynSense (formerly AiCTX)
author_email = sinabs@synsense.ai
description_file = README.md
description_content_type = text/markdown
long_description_content_type = text/markdown
summary = SynSense Spiking Neural Network simulator for deep neural networks (DNNs).
homepage = sinabs.ai
project_urls =
    Source code = https://github.com/synsense/sinabs
    Documentation = https://readthedocs.org/projects/sinabs/
license = Apache 2.0
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License Version 2.0 (Apache-2.0)
    Programming Language :: Python :: 3
keywords =
    spiking neural networks
    machine learning
    SNN
    DYNAPCNN
    Speck

[files]
packages = sinabs

[pbr]
skip_changelog = True
